# schrodinger

./: '  .gitignore  .prettierignore  README.md  about.html  app.py  build.sh  double_slit.py  excited_hydrogen.py  fusion.py  helium.py  hydrogen.html  hydrogen.py  hydrogen_base.py  index.html  large.html  photoelectric.py  pyproject.toml  quark.py  script.py  script2.py  skrypt.py
.github/workflows/: main.yml  static.yml
engine/: __init__.py  deserialization.py  render.py  renderpreview.py
engine/tests/: test_deserialization.py  test_render.py
examples/: README.md  double_slit.py  fusion.py  helium.py  photoelectric.py  quark.py
hydrogen_levels/: info.md
lib/: __init__.py  config.py  constants.py  electron.py  figlocation.py  gauss.py  graphs.py  interaction.py  particle.py  potential.py  waveutils.py
lib/quark/: __init__.py  baryon.py  color.py  hadron.py  meson.py  quark.py
lib/tests/: test_electron.py  test_photon.py  test_potential.py
lib/testutils/: __init__.py  asserts.py  clearcache.py  floateq.py
libschrodinger/: __init__.py  config.py  constants.py  electron.py  figlocation.py  gauss.py  graphs.py  interaction.py  particle.py  potential.py  waveutils.py
libschrodinger/quark/: __init__.py  baryon.py  color.py  hadron.py  meson.py  quark.py
libschrodinger/tests/: test_electron.py  test_photon.py  test_potential.py
libschrodinger/testutils/: asserts.py  floateq.py
static/: about.html  custom.css  custom.html  gallery.html  hydrogen.html  index.html  large.html  style.css
static/js/: constants.js  electron.js  engine.js  neutron.js  photon.js  potential.js  proton.js  serialization.js
