[project]
name = "libschrodinger"
version = "1.3.2"
authors = [
  { name="1p22geo", email="1p22geodecki@gmail.com" },
  { name="KacperTZSTI", email="kacper.m.trzop@gmail.com" },
]
description = "A small package for simulating quantum-scale physics."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "scipy",
  "matplotlib"
  # libschrodinger is platform-independent and doesn't need flask at any point
  # 
  # on the other hand, it may need ffmpeg though.
]

[project.urls]
Homepage = "https://github.com/1p22geo/schrodinger"
Issues = "https://github.com/1p22geo/schrodinger/issues"

[tool.setuptools.packages.find]
include = ["libschrodinger", "libschrodinger.quark"]
